Enabled live/hot reloading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
     "workbench.iconTheme": "material-icon-theme",
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "automatic",
+    "java.autobuild.enabled": true,
 }
