Added MockMcv Delete Beer endpoint Added static import settings for Assertions library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
         "org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*",
         "org.springframework.test.web.servlet.result.MockMvcResultMatchers.*",
         "org.hamcrest.Matchers.*",
+        "org.assertj.core.api.Assertions.*"
     ],
 }
