--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -152,8 +152,9 @@
 						</path>
 					</annotationProcessorPaths>
 					<compilerArgs>
-							<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
-							<arg>-Amapstruct.defaultComponentModel=spring</arg>
+						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
+						<arg>-Amapstruct.defaultComponentModel=spring</arg>
+						<arg>-Amapstruct.verbose=true</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
