--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,4 +7,32 @@ services:
     volumes:
       - ../..:/workspaces:cached
       - ${HOME}/.ssh:/root/.ssh:cached     # needed for ssh auth for github, or other servers
+    networks:
+      - dev-network
+    depends_on:
+      db:
+        condition: service_healthy
     command: sleep infinity
+
+  db:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mydb
+      MYSQL_USER: prateek
+      MYSQL_PASSWORD: root
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin  ping  -h  localhost --silent"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+    ports:
+      - 3306:3306  # Expose port 5432
+    networks:
+      - dev-network
+
+networks:
+  dev-network:
+    driver: bridge
