--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -82,6 +82,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<!-- Map struct dependency  -->
 		<dependency>
@@ -93,6 +94,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- mysql connector for connecting with jdbc -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>9.0.0</version>
 		</dependency>
 	</dependencies>
 
