--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "cwd": "${workspaceFolder}",
             "mainClass": "com.prateek.web.springrestdemo.SpringRestDemoApplication",
             "projectName": "spring-rest-demo",
-            "args": "",
+            "args": "--spring.profiles.active=localmysql",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
