Hikari connection pool configuration

--- a/spring-rest-demo/src/main/resources/application-localmysql.properties
+++ b/spring-rest-demo/src/main/resources/application-localmysql.properties
@@ -4,6 +4,24 @@ spring.datasource.url=jdbc:mysql://db:3306/mydb?useUnicode=true&characterEncodin
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# hikari connection pool config
+spring.datasource.hikari.pool-name=mydb-pool
+spring.datasource.hikari.maximum-pool-size=5
+
+# https://github.com/brettwooldridge/HikariCP/wiki/MySQL-Configuration
+# some configurations to get maximum out of the mysql hikari connection pool
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+spring.datasource.hikari.data-source-properties.useLocalSessionState=true
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
+spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
+spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+
+
 # specifies the SQL dialect that Hibernate would use
 # when generating SQL queries for a specific database.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
