Schema Script Creation Automatically

--- a/spring-rest-demo/src/main/resources/application-localmysql.properties
+++ b/spring-rest-demo/src/main/resources/application-localmysql.properties
@@ -38,3 +38,13 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Show the bind parameters to queries
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Automatically generate sql scripts to create schema
+# Spring does it by reflection on the entity classes
+# but keeping these properties always on keeps appending 
+# to the same file so only uncomment when you want ot use it 
+
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
