--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>9.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+			<version>10.16.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
