--- a/spring-rest-demo/src/main/resources/application-localmysql.properties
+++ b/spring-rest-demo/src/main/resources/application-localmysql.properties
@@ -28,7 +28,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Hibernate updates the schema to match the entity mappings without dropping any tables or columns. 
 # It adds new tables and columns as needed.
-spring.jpa.hibernate.ddl-auto=update
+# if using external migration tools spring will validate the 
+# schema of the db is consistent with entity declarations or not
+spring.jpa.hibernate.ddl-auto=validate
 
 # Show Sql queries being run by hibernate
 spring.jpa.properties.hibernate.show_sql=true
@@ -48,3 +50,7 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
+
+# flyway settings
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration/mysql
