--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=spring-rest-demo
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
+spring.flyway.enabled=false
