--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=spring-rest-demo
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
 spring.flyway.enabled=false
+# logging root level
+logging.level.com.prateek.web=trace
+# Enable detailed Hibernate transaction logging
+logging.level.org.hibernate.transaction=DEBUG
+logging.level.org.hibernate.engine.transaction.internal=DEBUG
