--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,17 @@
             "mainClass": "com.prateek.web.springrestdemo.SpringRestDemoApplication",
             "projectName": "spring-rest-demo",
             "args": "--spring.profiles.active=localmysql",
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=36315 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=spring-rest-demo"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-SfgRestfulBreweryApplication<sdjpa-springdatarest>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "guru.springframework.sfgrestbrewery.SfgRestfulBreweryApplication",
+            "projectName": "sdjpa-springdatarest",
+            "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
