--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,9 @@
         "org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*",
         "org.springframework.test.web.servlet.result.MockMvcResultMatchers.*",
         "org.hamcrest.Matchers.*",
-        "org.assertj.core.api.Assertions.*"
+        "org.assertj.core.api.Assertions.*",
+        "org.springframework.test.web.client.match.MockRestRequestMatchers.*",
+        "org.springframework.test.web.client.response.MockRestResponseCreators.*",
     ],
     "java.debug.settings.onBuildFailureProceed": true,
 }
