no need for mounting ssh keys added github authentication in postStart use an ssh key with passphrase that will add ssh identity to ssh-agent to add id to ssh agent: ssh-add to remove all ids from ssh-agent : ssh-add -D

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 FROM alpine:3.20
 
 # Install necessary packages and tools
-RUN apk add --no-cache bash curl git unzip nano make musl-utils musl-locales tzdata
+RUN apk add --no-cache bash curl git unzip nano make musl-utils musl-locales tzdata openssh
 
 # Set the default shell to bash
 ENV SHELL /bin/bash
