Added dependency spring security This creates a user and password by default and configures basic htttp authentication

--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.9</version>
 		</dependency>
+		<!-- Spring security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
