Added custom credentials

--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.level.com.prateek.web=trace
 # Enable detailed Hibernate transaction logging
 logging.level.org.hibernate.transaction=DEBUG
 logging.level.org.hibernate.engine.transaction.internal=DEBUG
+# User for spring security
+spring.security.user.name=user
+spring.security.user.password=password
