Added config for running tests with spring profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,18 @@
         "org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*",
         "org.springframework.test.web.servlet.result.MockMvcResultMatchers.*",
         "org.hamcrest.Matchers.*",
-        "org.assertj.core.api.Assertions.*"
+        "org.assertj.core.api.Assertions.*",
+        "org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*",
     ],
     "java.debug.settings.onBuildFailureProceed": true,
+    "java.test.config": {
+            "name": "Spring Boot Test",
+            "request": "launch",
+            "type": "java",
+            "mainClass": "com.example.Application", // Replace with your main application class
+            "args": ["--spring.profiles.active=localmysql"], // Set your profile here
+            "vmArgs": ["-Dspring.profiles.active=localmysql"], // Set your profile here
+            "console": "integratedTerminal"
+    }
+     
 }
