Added vscode autoformatting ans autosaving

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 2000,
+    // Other settings here
+    "editor.formatOnSave": true,
     "java.server.launchMode": "Standard",
     "workbench.iconTheme": "material-icon-theme",
     "java.compile.nullAnalysis.mode": "automatic",
@@ -25,13 +29,16 @@
     ],
     "java.debug.settings.onBuildFailureProceed": true,
     "java.test.config": {
-            "name": "Spring Boot Test",
-            "request": "launch",
-            "type": "java",
-            "mainClass": "com.example.Application", // Replace with your main application class
-            "args": ["--spring.profiles.active=localmysql"], // Set your profile here
-            "vmArgs": ["-Dspring.profiles.active=localmysql"], // Set your profile here
-            "console": "integratedTerminal"
+        "name": "Spring Boot Test",
+        "request": "launch",
+        "type": "java",
+        "mainClass": "com.example.Application", // Replace with your main application class
+        "args": [
+            "--spring.profiles.active=localmysql"
+        ], // Set your profile here
+        "vmArgs": [
+            "-Dspring.profiles.active=localmysql"
+        ], // Set your profile here
+        "console": "integratedTerminal"
     }
-     
 }
