Added Spring Security Config for oauth2 authentication Added Security Filter chain with oauth2ResourceServer Added oauth2 authorization server uri

--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -7,6 +7,5 @@ logging.level.com.prateek.web=trace
 # Enable detailed Hibernate transaction logging
 logging.level.org.hibernate.transaction=DEBUG
 logging.level.org.hibernate.engine.transaction.internal=DEBUG
-# User for spring security
-spring.security.user.name=user
-spring.security.user.password=password
+# User for spring security oauth2 resource server to fetch public key from oauth2 auth server to verify incoming jwt
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
