Initializing DB using ConnectionFactoryInitializer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "R2dbcappApplication",
+            "request": "launch",
+            "mainClass": "com.prateek.reactive.r2dbcapp.R2dbcappApplication",
+            "projectName": "r2dbcapp"
+        },
+        {
+            "type": "java",
             "name": "Application",
             "request": "launch",
             "mainClass": "com.prateek.auth.server.Application",
