Added application.properties for mongodb datasource and repo mode will have to add config classes for more than one data source

--- a/mongo/src/main/resources/application.properties
+++ b/mongo/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=mongo
+spring.data.mongodb.repositories.type=REACTIVE
+spring.data.mongodb.host=mymongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=sfg
+spring.data.mongodb.username=root
+spring.data.mongodb.password=admin
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.com.mongodb=DEBUG
+
