--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -74,7 +74,22 @@
 			<version>4.2.2</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- Test container dependencies -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.20.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.20.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mongodb</artifactId>
+			<version>1.20.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
