--- a/mongo/src/main/resources/application-test.properties
+++ b/mongo/src/main/resources/application-test.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.port=8888
-spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=host.docker.internal
