--- a/mongo/src/main/resources/application.properties
+++ b/mongo/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=sfg
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-logging.level.com.mongodb=DEBUG
-
+# Enable mongo db logging 
+# logging.level.com.mongodb=trace
+# Enable logging actual queries being run on mongo
+# logging.level.org.mongodb.driver=trace
+# logging.level.org.springframework.data=trace
+# logging.level.org.springframework.data.mongodb.core.MongoTemplate=trace
+# logging.level.org.springframework.data.mongodb.core.query=trace
