--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -90,6 +90,11 @@
 			<artifactId>mongodb</artifactId>
 			<version>1.20.1</version>
 		</dependency>
+		<!-- for oauth2 resource server -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
