--- a/mongo/src/main/resources/application.properties
+++ b/mongo/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=sfg
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
+# oauth properties
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 # Enable mongo db logging 
 # logging.level.com.mongodb=trace
 # Enable logging actual queries being run on mongo
