added oauth2.0 resource server url

--- a/r2dbcapp/src/main/resources/application.properties
+++ b/r2dbcapp/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=r2dbcapp
 spring.h2.console.enabled=true
 logging.level.org.springframework.r2dbc=trace
+# oauth properties
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
