--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -141,7 +141,18 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-
+		<!-- rest assured dependency with swagger request validator -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.oai</groupId>
+			<artifactId>swagger-request-validator-restassured</artifactId>
+			<version>2.41.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
