actuator endpoints config  webflux app

--- a/r2dbcapp/src/main/resources/application.properties
+++ b/r2dbcapp/src/main/resources/application.properties
@@ -2,5 +2,9 @@ server.port=8082
 spring.application.name=r2dbcapp
 spring.h2.console.enabled=true
 logging.level.org.springframework.r2dbc=trace
+# kubernetes endpoints
+management.endpoint.health.probes.enabled=true
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
 # oauth properties
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
