Added kubernetes actuator endpoints to webflux.fn app

--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -104,6 +104,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-client</artifactId>
 		</dependency>
+		<!-- enabling actuator endpoints -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
