--- a/mongo/src/main/resources/application.properties
+++ b/mongo/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=sfg
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
+# kubernetes endpoints
+management.endpoint.health.probes.enabled=true
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
 # oauth properties
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 # Enable mongo db logging 
