--- a/auth.server/src/main/resources/application.properties
+++ b/auth.server/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=auth.server
 server.port=9000
+# kubernetes endpoints
+management.endpoint.health.probes.enabled=true
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
+
 # Enable DEBUG level logging for Spring Security
 logging.level.org.springframework.security=trace
 # Enable DEBUG level logging for OAuth2 authorization server
