--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=spring-rest-demo
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
 spring.flyway.enabled=false
+# enable logbook logging
+logging.level.org.zalando.logbook=trace
 # kubernetes probes config
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
