--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -32,6 +32,7 @@
 		<org.mapstruct.version>1.6.0.RC1</org.mapstruct.version>
 		<lombok.version>1.18.32</lombok.version>
 		<logbook.version>3.9.0</logbook.version>
+		<logstash.logback.encoder.version>8.0</logstash.logback.encoder.version>
 	</properties>
 	<dependencies>
 		<!-- spring boot web dependency for web apps 
@@ -160,11 +161,23 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<!-- enabling logbook request response tracing -->
-		 <dependency>
+		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>logbook-spring-boot-starter</artifactId>
 			<version>${logbook.version}</version>
-		 </dependency>
+		</dependency>
+		<!-- encodes the spring logback logs in json format -->
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>${logstash.logback.encoder.version}</version>
+		</dependency>
+		<!-- enabling logbook logstash compatibility (makes logbook logs also in json encoding) -->
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-logstash</artifactId>
+			<version>${logbook.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
