--- a/r2dbcapp/src/main/resources/application.properties
+++ b/r2dbcapp/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8082
 spring.application.name=r2dbcapp
 spring.h2.console.enabled=true
 logging.level.org.springframework.r2dbc=trace
+# enable logbook logging
+logging.level.org.zalando.logbook=trace
 # kubernetes endpoints
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
