Added logbook config to rest template

--- a/spring-6-rest-template-main/src/main/resources/application.properties
+++ b/spring-6-rest-template-main/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 rest.template.beer.base.url=http://localhost:8080
 
-
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 spring.security.oauth2.client.registration.springauth.client-id=messaging-client
 spring.security.oauth2.client.registration.springauth.client-secret=secret
@@ -10,3 +9,6 @@ spring.security.oauth2.client.registration.springauth.authorization-grant-type=c
 spring.security.oauth2.client.registration.springauth.provider=springauth
 spring.security.oauth2.client.provider.springauth.authorization-uri=http://localhost:9000/auth2/authorize
 spring.security.oauth2.client.provider.springauth.token-uri=http://localhost:9000/oauth2/token
+
+# enabling logbook logging
+logging.level.org.zalando.logbook=trace
