--- a/spring-6-rest-template-main/pom.xml
+++ b/spring-6-rest-template-main/pom.xml
@@ -19,6 +19,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <logbook.version>3.9.0</logbook.version>
     </properties>
 
     <dependencies>
@@ -43,6 +44,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring</artifactId>
+            <version>${logbook.version}</version>
         </dependency>
     </dependencies>
 
