Configured Webclient with logbook

--- a/webclient/src/main/resources/application.properties
+++ b/webclient/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=webclient
-webclient.rooturl=http://localhost:8080
+webclient.rooturl=http://localhost:8083
+
+# enable logbook console output
+logging.level.org.zalando.logbook=trace
 
 # oauth2 config we can replace springauth with any name we want
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
