enabled caching on listbeers service

--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
 spring.flyway.enabled=false
 # enabling caching
-spring.cache.cache-names=beerCache
+spring.cache.cache-names=beerCache,beerListCache 
 # enable logbook logging
 logging.level.org.zalando.logbook=trace
 # kubernetes probes config
