Added Persistence for auditing CreateBeer Event

--- a/spring-rest-demo/Makefile
+++ b/spring-rest-demo/Makefile
@@ -37,6 +37,10 @@ test-mysql:
 
 # Rule to start spring boot app with mysql
 run-mysql:
+	mvn spring-boot:run -Dspring-boot.run.profiles=default
+
+# Rule to start spring boot app with mysql
+run-mysql:
 	mvn spring-boot:run -Dspring-boot.run.profiles=localmysql
 
 # cleans compiles tests and generates swagger doc
