--- a/spring-rest-demo/src/main/resources/application.properties
+++ b/spring-rest-demo/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=spring-rest-demo
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
 spring.flyway.enabled=false
+spring.jpa.hibernate.ddl-auto=
 # enabling caching
 spring.cache.cache-names=beerCache,beerListCache 
 # enable logbook logging
@@ -18,3 +19,13 @@ logging.level.org.hibernate.transaction=DEBUG
 logging.level.org.hibernate.engine.transaction.internal=DEBUG
 # User for spring security oauth2 resource server to fetch public key from oauth2 auth server to verify incoming jwt
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+
+# Automatically generate sql scripts to create schema
+# Spring does it by reflection on the entity classes
+# but keeping these properties always on keeps appending 
+# to the same file so only uncomment when you want ot use it 
+
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
