Extended dockerfile to install curl needed for healthcheck

--- a/auth.server/Makefile
+++ b/auth.server/Makefile
@@ -2,5 +2,6 @@
 # this maven goal is configured in the parent pom
 image: 
 	mvn clean compile package spring-boot:build-image -DskipTests=true
+	docker build -t auth.server:latest .
 
 .PHONY: image	
