--- a/mongo/Makefile
+++ b/mongo/Makefile
@@ -46,11 +46,11 @@ run:
 
 test-all: test-rest test-mongo
 
-# creates an oci image with name: docker.io/library/mongo:0.0.1-SNAPSHOT
+# creates an oci image with name: docker.io/library/reactive-mongo:0.0.1-SNAPSHOT
 # this maven goal is configured in the parent pom
 image: 
 	mvn clean compile package spring-boot:build-image -DskipTests=true
-
+	docker build -t reactive-mongo:latest .
 
 # Phony targets to avoid conflicts with files of the same name
 .PHONY: all clean compile test package install deploy test-rest test-all test-mongo image
