--- a/r2dbcapp/Makefile
+++ b/r2dbcapp/Makefile
@@ -41,6 +41,6 @@ verify: clean test verify
 # this maven goal is configured in the parent pom
 image: 
 	mvn clean compile package spring-boot:build-image -DskipTests=true
-
+	docker build -t r2dbcapp:latest .
 # Phony targets to avoid conflicts with files of the same name
 .PHONY: all clean compile test package install deploy run image
